--- a/Done/Base.lproj/Main.storyboard
+++ b/Done/Base.lproj/Main.storyboard
@@ -1333,12 +1333,44 @@
         <!--Menu-->
         <scene sceneID="DHh-gd-zbe">
             <objects>
-                <viewController id="hz9-p4-j68" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MenuListViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hz9-p4-j68" customClass="MenuListViewController" customModule="Done" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="c2c-wB-kox">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cnw-Ix-dYc">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z4W-ZB-Vo8">
+                                        <rect key="frame" x="20" y="20" width="335" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="RFB-Na-eOB"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="New Groups">
+                                            <color key="titleColor" red="0.59607843140000005" green="0.76862745099999996" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="btnNewGroupsAction:" destination="hz9-p4-j68" eventType="touchUpInside" id="LkZ-1E-6ya"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="z4W-ZB-Vo8" firstAttribute="top" secondItem="cnw-Ix-dYc" secondAttribute="top" constant="20" id="1fC-iY-hn2"/>
+                                    <constraint firstAttribute="trailing" secondItem="z4W-ZB-Vo8" secondAttribute="trailing" constant="20" id="cGE-3I-6He"/>
+                                    <constraint firstItem="z4W-ZB-Vo8" firstAttribute="leading" secondItem="cnw-Ix-dYc" secondAttribute="leading" constant="20" id="zFw-U8-i1g"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="fVu-gJ-WKk"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="fVu-gJ-WKk" firstAttribute="bottom" secondItem="cnw-Ix-dYc" secondAttribute="bottom" id="0Hq-Ml-36e"/>
+                            <constraint firstItem="cnw-Ix-dYc" firstAttribute="leading" secondItem="fVu-gJ-WKk" secondAttribute="leading" id="Ps6-rm-Wrq"/>
+                            <constraint firstItem="fVu-gJ-WKk" firstAttribute="trailing" secondItem="cnw-Ix-dYc" secondAttribute="trailing" id="RtE-TY-2C5"/>
+                            <constraint firstItem="cnw-Ix-dYc" firstAttribute="top" secondItem="fVu-gJ-WKk" secondAttribute="top" id="bwQ-sW-Csq"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Menu" image="line.3.horizontal" catalog="system" id="UNH-Bx-Ma2"/>
                 </viewController>
