--- a/Done/Base.lproj/Main.storyboard
+++ b/Done/Base.lproj/Main.storyboard
@@ -1347,7 +1347,7 @@
                                             <constraint firstAttribute="height" constant="50" id="RFB-Na-eOB"/>
                                         </constraints>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="New Groups">
+                                        <state key="normal" title="Groups">
                                             <color key="titleColor" red="0.59607843140000005" green="0.76862745099999996" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         </state>
                                         <connections>
@@ -1708,6 +1708,103 @@ Earned</string>
             </objects>
             <point key="canvasLocation" x="3989.5999999999999" y="133.5832083958021"/>
         </scene>
+        <!--Group List View Controller-->
+        <scene sceneID="IBR-UP-qOt">
+            <objects>
+                <viewController storyboardIdentifier="GroupListViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="VxD-uV-72h" customClass="GroupListViewController" customModule="Done" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AFt-oD-jnJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zz2-nG-6E4">
+                                <rect key="frame" x="0.0" y="20" width="375" height="40"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Inj-Pm-xrE">
+                                        <rect key="frame" x="10" y="5" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="feV-rE-jaB"/>
+                                            <constraint firstAttribute="width" constant="30" id="kZX-LF-JMy"/>
+                                        </constraints>
+                                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="chevron.backward" catalog="system" title=" "/>
+                                        <connections>
+                                            <action selector="btnBackAction:" destination="VxD-uV-72h" eventType="touchUpInside" id="RPy-D9-bFd"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Groups List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tsz-zM-aUl">
+                                        <rect key="frame" x="127.5" y="9.5" width="91" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="6ca-pV-Bhq"/>
+                                    <constraint firstItem="Inj-Pm-xrE" firstAttribute="centerY" secondItem="zz2-nG-6E4" secondAttribute="centerY" id="7dg-aY-q7o"/>
+                                    <constraint firstItem="Inj-Pm-xrE" firstAttribute="leading" secondItem="zz2-nG-6E4" secondAttribute="leading" constant="10" id="hpk-kq-1p3"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B7Y-9R-DLD">
+                                <rect key="frame" x="0.0" y="60" width="375" height="607"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fMQ-wb-QRb">
+                                        <rect key="frame" x="16" y="10" width="343" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="D5s-fF-T6A"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Create Group">
+                                            <color key="titleColor" red="0.59607843140000005" green="0.76862745099999996" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="btnCreateGroupsAction:" destination="VxD-uV-72h" eventType="touchUpInside" id="2pJ-ae-Xob"/>
+                                        </connections>
+                                    </button>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="9xS-Ri-A6u">
+                                        <rect key="frame" x="16" y="70" width="343" height="527"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="VxD-uV-72h" id="EFW-PP-jic"/>
+                                            <outlet property="delegate" destination="VxD-uV-72h" id="53g-9d-j4A"/>
+                                        </connections>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="fMQ-wb-QRb" firstAttribute="top" secondItem="B7Y-9R-DLD" secondAttribute="top" constant="10" id="9pR-DK-dNf"/>
+                                    <constraint firstAttribute="trailing" secondItem="9xS-Ri-A6u" secondAttribute="trailing" constant="16" id="Feo-ef-NyF"/>
+                                    <constraint firstItem="9xS-Ri-A6u" firstAttribute="top" secondItem="fMQ-wb-QRb" secondAttribute="bottom" constant="10" id="PPf-7P-I63"/>
+                                    <constraint firstAttribute="trailing" secondItem="fMQ-wb-QRb" secondAttribute="trailing" constant="16" id="cjU-r8-fU2"/>
+                                    <constraint firstItem="9xS-Ri-A6u" firstAttribute="leading" secondItem="B7Y-9R-DLD" secondAttribute="leading" constant="16" id="e54-TZ-BoQ"/>
+                                    <constraint firstItem="fMQ-wb-QRb" firstAttribute="leading" secondItem="B7Y-9R-DLD" secondAttribute="leading" constant="16" id="fdk-jr-lx7"/>
+                                    <constraint firstAttribute="bottom" secondItem="9xS-Ri-A6u" secondAttribute="bottom" constant="10" id="mtw-1Y-oMH"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="dCw-fc-ehp"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="dCw-fc-ehp" firstAttribute="trailing" secondItem="zz2-nG-6E4" secondAttribute="trailing" id="1VL-1i-uYd"/>
+                            <constraint firstItem="B7Y-9R-DLD" firstAttribute="top" secondItem="zz2-nG-6E4" secondAttribute="bottom" id="CGr-nB-tet"/>
+                            <constraint firstItem="dCw-fc-ehp" firstAttribute="bottom" secondItem="B7Y-9R-DLD" secondAttribute="bottom" id="JWX-E4-TL5"/>
+                            <constraint firstItem="zz2-nG-6E4" firstAttribute="top" secondItem="dCw-fc-ehp" secondAttribute="top" id="Skc-zf-qoX"/>
+                            <constraint firstItem="B7Y-9R-DLD" firstAttribute="leading" secondItem="dCw-fc-ehp" secondAttribute="leading" id="lbk-Dp-sCU"/>
+                            <constraint firstItem="dCw-fc-ehp" firstAttribute="trailing" secondItem="B7Y-9R-DLD" secondAttribute="trailing" id="mrC-WO-JCH"/>
+                            <constraint firstItem="zz2-nG-6E4" firstAttribute="leading" secondItem="dCw-fc-ehp" secondAttribute="leading" id="u0U-Ww-19R"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableviewGroupList" destination="9xS-Ri-A6u" id="Bad-Kz-ZeN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mx1-o6-OQ6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5377" y="134"/>
+        </scene>
         <!--Play Video View Controller-->
         <scene sceneID="Psf-hS-rfD">
             <objects>
@@ -1773,7 +1870,7 @@ Earned</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2h5-9P-abb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5406" y="123"/>
+            <point key="canvasLocation" x="6238" y="134"/>
         </scene>
         <!--Filters View Controller-->
         <scene sceneID="UCa-vR-nXf">
@@ -1945,7 +2042,7 @@ Earned</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ydk-Pi-xyt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6058" y="123"/>
+            <point key="canvasLocation" x="7047" y="134"/>
         </scene>
         <!--Custom View Controller-->
         <scene sceneID="2p1-9Y-YMm">
