--- a/Done/TableViewCells/ViewStatusTableViewCell.xib
+++ b/Done/TableViewCells/ViewStatusTableViewCell.xib
@@ -237,7 +237,10 @@
                 <outlet property="imgWidth" destination="rQS-Xx-Zjt" id="vvd-kd-IuU"/>
                 <outlet property="lastMsgHeight" destination="VBu-ew-xRn" id="FeC-fV-tCl"/>
                 <outlet property="lastMsgLbl" destination="3J3-AL-Wi8" id="hed-jm-t7s"/>
+                <outlet property="left" destination="KCo-jG-N7J" id="pHI-wO-8hR"/>
                 <outlet property="markBtn" destination="RUW-Oc-aUE" id="mx3-3i-7aL"/>
+                <outlet property="markCheckwidth" destination="SVU-xt-wD0" id="gkM-CN-XtE"/>
+                <outlet property="markDoneWidth" destination="fX9-eZ-dSc" id="XtE-Pq-ion"/>
                 <outlet property="mediaImgVW" destination="4O5-kJ-Rny" id="3Qr-Nq-9wg"/>
                 <outlet property="nameLbl" destination="9kh-Fg-At1" id="GeN-EA-0Pa"/>
                 <outlet property="statusLbl" destination="TWk-K3-Kf1" id="dZG-ch-16v"/>
