--- a/Done/Base.lproj/Main.storyboard
+++ b/Done/Base.lproj/Main.storyboard
@@ -879,10 +879,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icn_Login_top" translatesAutoresizingMaskIntoConstraints="NO" id="AHR-3m-Bwj">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="150" id="UuD-09-XSS"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="165"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ji1-es-kXM">
                                         <rect key="frame" x="15" y="35" width="30" height="30"/>
@@ -897,14 +894,14 @@
                                             <action selector="btnBackAction:" destination="nrk-0B-Rm8" eventType="touchUpInside" id="1IC-0h-Ulo"/>
                                         </connections>
                                     </button>
-                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gko-o9-eQH">
-                                        <rect key="frame" x="0.0" y="60" width="375" height="607"/>
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gko-o9-eQH">
+                                        <rect key="frame" x="0.0" y="80" width="375" height="587"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GLP-SQ-jQI">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="607"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="516"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jv5-0T-DgA">
-                                                        <rect key="frame" x="0.0" y="90" width="375" height="517"/>
+                                                        <rect key="frame" x="0.0" y="85" width="375" height="431"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stphnie Brown" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uwG-Ie-yca">
                                                                 <rect key="frame" x="16" y="85" width="343" height="24"/>
@@ -975,21 +972,39 @@
                                                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
+                                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VhK-BM-ri2">
+                                                                <rect key="frame" x="16" y="293" width="343" height="128"/>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="128" id="E1g-fV-N64"/>
+                                                                </constraints>
+                                                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="I12-zg-BQw">
+                                                                    <size key="itemSize" width="128" height="128"/>
+                                                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                                </collectionViewFlowLayout>
+                                                                <cells/>
+                                                            </collectionView>
                                                         </subviews>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
+                                                            <constraint firstAttribute="bottom" secondItem="VhK-BM-ri2" secondAttribute="bottom" constant="10" id="3XI-z2-TBl"/>
                                                             <constraint firstItem="ahQ-8s-aZs" firstAttribute="leading" secondItem="uwG-Ie-yca" secondAttribute="leading" id="55n-Au-e9N"/>
                                                             <constraint firstItem="6hA-OC-kKj" firstAttribute="top" secondItem="uwG-Ie-yca" secondAttribute="bottom" constant="15" id="Hyn-JR-CKO"/>
                                                             <constraint firstItem="ahQ-8s-aZs" firstAttribute="trailing" secondItem="uwG-Ie-yca" secondAttribute="trailing" id="KjH-Pa-xLy"/>
                                                             <constraint firstItem="6hA-OC-kKj" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="uwG-Ie-yca" secondAttribute="leading" id="bNc-7w-y2A"/>
+                                                            <constraint firstItem="VhK-BM-ri2" firstAttribute="leading" secondItem="ahQ-8s-aZs" secondAttribute="leading" id="dvB-MQ-au6"/>
+                                                            <constraint firstItem="VhK-BM-ri2" firstAttribute="trailing" secondItem="ahQ-8s-aZs" secondAttribute="trailing" id="i2G-aX-ozi"/>
                                                             <constraint firstItem="6hA-OC-kKj" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="uwG-Ie-yca" secondAttribute="trailing" id="iYe-l1-CKX"/>
+                                                            <constraint firstItem="VhK-BM-ri2" firstAttribute="top" secondItem="ahQ-8s-aZs" secondAttribute="bottom" constant="18.5" id="jA3-Cy-6TS"/>
                                                             <constraint firstItem="ahQ-8s-aZs" firstAttribute="top" secondItem="6hA-OC-kKj" secondAttribute="bottom" constant="20" id="jhM-Y4-XRe"/>
                                                             <constraint firstItem="uwG-Ie-yca" firstAttribute="leading" secondItem="jv5-0T-DgA" secondAttribute="leading" constant="16" id="rvc-jC-5xI"/>
                                                             <constraint firstAttribute="trailing" secondItem="uwG-Ie-yca" secondAttribute="trailing" constant="16" id="yqd-ng-vfC"/>
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2dY-3o-cIj">
-                                                        <rect key="frame" x="122.5" y="25" width="130" height="130"/>
+                                                        <rect key="frame" x="122.5" y="20" width="130" height="130"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Staff-App-15" translatesAutoresizingMaskIntoConstraints="NO" id="nXH-vF-qsC">
                                                                 <rect key="frame" x="8" y="8" width="114" height="114"/>
@@ -1020,6 +1035,7 @@
                                                 <constraints>
                                                     <constraint firstItem="jv5-0T-DgA" firstAttribute="top" secondItem="2dY-3o-cIj" secondAttribute="bottom" constant="-65" id="4mN-fB-Cvn"/>
                                                     <constraint firstItem="jv5-0T-DgA" firstAttribute="leading" secondItem="GLP-SQ-jQI" secondAttribute="leading" id="EUy-0N-m2E"/>
+                                                    <constraint firstItem="2dY-3o-cIj" firstAttribute="top" secondItem="GLP-SQ-jQI" secondAttribute="top" constant="20" id="ZMf-ge-yCj"/>
                                                     <constraint firstAttribute="trailing" secondItem="jv5-0T-DgA" secondAttribute="trailing" id="aPw-6H-DUX"/>
                                                     <constraint firstItem="uwG-Ie-yca" firstAttribute="top" secondItem="2dY-3o-cIj" secondAttribute="bottom" constant="20" id="pi3-J4-3bw"/>
                                                     <constraint firstAttribute="bottom" secondItem="jv5-0T-DgA" secondAttribute="bottom" id="xMe-i1-aFt"/>
@@ -1030,7 +1046,6 @@
                                             <constraint firstAttribute="bottom" secondItem="GLP-SQ-jQI" secondAttribute="bottom" id="3lc-gW-iOe"/>
                                             <constraint firstItem="GLP-SQ-jQI" firstAttribute="width" secondItem="gko-o9-eQH" secondAttribute="width" id="7PX-hz-06C"/>
                                             <constraint firstItem="GLP-SQ-jQI" firstAttribute="leading" secondItem="gko-o9-eQH" secondAttribute="leading" id="9j5-YB-ryn"/>
-                                            <constraint firstItem="GLP-SQ-jQI" firstAttribute="height" secondItem="gko-o9-eQH" secondAttribute="height" id="AqQ-32-J4J"/>
                                             <constraint firstItem="GLP-SQ-jQI" firstAttribute="top" secondItem="gko-o9-eQH" secondAttribute="top" id="dEr-Kl-BxW"/>
                                             <constraint firstAttribute="trailing" secondItem="GLP-SQ-jQI" secondAttribute="trailing" id="dfY-Hg-cO3"/>
                                         </constraints>
@@ -1039,12 +1054,12 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="AHR-3m-Bwj" firstAttribute="leading" secondItem="rJ9-pW-zy1" secondAttribute="leading" id="AIb-Lw-ujP"/>
-                                    <constraint firstItem="gko-o9-eQH" firstAttribute="top" secondItem="AHR-3m-Bwj" secondAttribute="bottom" constant="-90" id="APU-f9-Rpl"/>
                                     <constraint firstItem="gko-o9-eQH" firstAttribute="leading" secondItem="rJ9-pW-zy1" secondAttribute="leading" id="LQA-eB-ZS8"/>
                                     <constraint firstItem="2dY-3o-cIj" firstAttribute="top" secondItem="AHR-3m-Bwj" secondAttribute="bottom" constant="-65" id="LeI-8L-Ih8"/>
                                     <constraint firstItem="AHR-3m-Bwj" firstAttribute="top" secondItem="rJ9-pW-zy1" secondAttribute="top" id="VtY-0e-lzI"/>
                                     <constraint firstAttribute="trailing" secondItem="gko-o9-eQH" secondAttribute="trailing" id="Z3m-GV-vbA"/>
                                     <constraint firstAttribute="trailing" secondItem="AHR-3m-Bwj" secondAttribute="trailing" id="drB-az-Doo"/>
+                                    <constraint firstItem="gko-o9-eQH" firstAttribute="top" secondItem="ji1-es-kXM" secondAttribute="bottom" constant="15" id="eQC-QK-9aF"/>
                                     <constraint firstAttribute="bottom" secondItem="gko-o9-eQH" secondAttribute="bottom" id="kAf-x7-3uI"/>
                                 </constraints>
                             </view>
@@ -1062,6 +1077,10 @@
                             <constraint firstItem="ji1-es-kXM" firstAttribute="leading" secondItem="7W4-x9-vkV" secondAttribute="leading" constant="15" id="qF3-bG-e6f"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionviewData" destination="VhK-BM-ri2" id="9fK-WJ-dfX"/>
+                        <outlet property="constraintCollectionviewHeight" destination="E1g-fV-N64" id="SqN-vS-Jqc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7B5-HD-b64" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -3270,9 +3289,6 @@ video</string>
         </designable>
         <designable name="d5i-7M-6i3">
             <size key="intrinsicContentSize" width="70.5" height="34"/>
-        </designable>
-        <designable name="eaf-J2-j43">
-            <size key="intrinsicContentSize" width="190" height="30"/>
         </designable>
         <designable name="oCX-p4-B5n">
             <size key="intrinsicContentSize" width="155" height="34"/>
