--- a/Done/TableViewCells/SenderImageAndVideoTableViewCell.xib
+++ b/Done/TableViewCells/SenderImageAndVideoTableViewCell.xib
@@ -56,6 +56,11 @@
                                                             <constraint firstAttribute="width" constant="120" id="wzf-Yg-snv"/>
                                                             <constraint firstAttribute="width" secondItem="FCG-o5-6kc" secondAttribute="height" multiplier="9:12" id="xMl-Ro-pQ8"/>
                                                         </constraints>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                                <real key="value" value="4"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
                                                     </imageView>
                                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N5h-Jf-KqM">
                                                         <rect key="frame" x="125" y="65" width="30" height="30"/>
