--- a/Done/Base.lproj/Main.storyboard
+++ b/Done/Base.lproj/Main.storyboard
@@ -439,19 +439,23 @@
                                             <action selector="backBtnAction" destination="vkh-fz-HZa" eventType="touchUpInside" id="mya-Ey-DYQ"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Discussion" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zT9-eu-QMs">
-                                        <rect key="frame" x="144" y="14.5" width="87" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zT9-eu-QMs">
+                                        <rect key="frame" x="55" y="14.5" width="280" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="rfR-3c-al8"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="zT9-eu-QMs" firstAttribute="centerY" secondItem="IRt-vH-gsJ" secondAttribute="centerY" id="J0p-8a-OZv"/>
+                                    <constraint firstItem="zT9-eu-QMs" firstAttribute="centerY" secondItem="IRt-vH-gsJ" secondAttribute="centerY" id="FIK-RJ-d0V"/>
                                     <constraint firstItem="uFm-EX-Cfp" firstAttribute="centerY" secondItem="IRt-vH-gsJ" secondAttribute="centerY" id="Par-EH-SAS"/>
+                                    <constraint firstAttribute="trailing" secondItem="zT9-eu-QMs" secondAttribute="trailing" constant="40" id="Xx7-2j-sOB"/>
                                     <constraint firstItem="uFm-EX-Cfp" firstAttribute="leading" secondItem="IRt-vH-gsJ" secondAttribute="leading" constant="10" id="eyo-I4-Caf"/>
                                     <constraint firstAttribute="height" constant="50" id="fhc-Za-Dat"/>
-                                    <constraint firstItem="zT9-eu-QMs" firstAttribute="centerX" secondItem="IRt-vH-gsJ" secondAttribute="centerX" id="xnz-ip-26u"/>
+                                    <constraint firstItem="zT9-eu-QMs" firstAttribute="leading" secondItem="uFm-EX-Cfp" secondAttribute="trailing" constant="10" id="hxS-7n-Unk"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="byO-qb-Ikq">
@@ -3285,11 +3289,17 @@ video</string>
         </scene>
     </scenes>
     <designables>
+        <designable name="aOE-ru-gA4">
+            <size key="intrinsicContentSize" width="190" height="30"/>
+        </designable>
         <designable name="d13-8T-K80">
             <size key="intrinsicContentSize" width="28.5" height="34.5"/>
         </designable>
         <designable name="d5i-7M-6i3">
             <size key="intrinsicContentSize" width="70.5" height="34"/>
+        </designable>
+        <designable name="eaf-J2-j43">
+            <size key="intrinsicContentSize" width="190" height="30"/>
         </designable>
         <designable name="oCX-p4-B5n">
             <size key="intrinsicContentSize" width="155" height="34"/>
