--- a/Done/UIView/TaskProofView.xib
+++ b/Done/UIView/TaskProofView.xib
@@ -11,8 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TaskProofView" customModule="Done" customModuleProvider="target">
             <connections>
+                <outlet property="collectionviewImageUpload" destination="I6D-oF-c79" id="nBE-az-9nq"/>
                 <outlet property="constraintViewCenter" destination="sXD-2U-eVe" id="IzI-Hx-ngR"/>
-                <outlet property="lblUploadedName" destination="Bbe-dQ-QA4" id="gLs-ug-zBO"/>
                 <outlet property="txtviewDesc" destination="Lpj-p5-6du" id="Q4i-7y-CMo"/>
                 <outlet property="viewBG" destination="y7q-sc-Y9n" id="zCE-C2-Smh"/>
             </connections>
@@ -23,7 +23,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y7q-sc-Y9n">
-                    <rect key="frame" x="35" y="323.5" width="343" height="263.5"/>
+                    <rect key="frame" x="35" y="273.5" width="343" height="363.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Proof" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p7Z-cn-udS">
                             <rect key="frame" x="15" y="15" width="313" height="24"/>
@@ -54,36 +54,21 @@
                                 <constraint firstAttribute="height" constant="0.5" id="fH6-i1-X2S"/>
                             </constraints>
                         </view>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="2lO-tU-L6P">
-                            <rect key="frame" x="15" y="158.5" width="313" height="40"/>
-                            <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bbe-dQ-QA4">
-                                    <rect key="frame" x="0.0" y="0.0" width="313" height="0.0"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" id="cVd-id-ch8"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T6J-6z-4mb">
-                                    <rect key="frame" x="0.0" y="5" width="313" height="35"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="35" id="f1h-NO-bXb"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                    <state key="normal" title="Upload Image or video">
-                                        <color key="titleColor" red="0.59607843140000005" green="0.76862745099999996" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="btnVideoImageUploadAction:" destination="-1" eventType="touchUpInside" id="iwK-dp-MVg"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                        </stackView>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="I6D-oF-c79">
+                            <rect key="frame" x="15" y="158.5" width="313" height="140"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="140" id="6jf-2w-qY5"/>
+                            </constraints>
+                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="88q-sF-G5w">
+                                <size key="itemSize" width="128" height="128"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jkO-Q9-FSj">
-                            <rect key="frame" x="121.5" y="213.5" width="100" height="30"/>
+                            <rect key="frame" x="121.5" y="313.5" width="100" height="30"/>
                             <color key="backgroundColor" red="0.59607843140000005" green="0.76862745099999996" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="XXI-hJ-NyW"/>
@@ -107,21 +92,21 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
+                        <constraint firstItem="jkO-Q9-FSj" firstAttribute="top" secondItem="I6D-oF-c79" secondAttribute="bottom" constant="15" id="4ob-5k-gTi"/>
                         <constraint firstItem="mXg-HB-bLn" firstAttribute="leading" secondItem="Lpj-p5-6du" secondAttribute="leading" id="6UE-sh-dTs"/>
                         <constraint firstItem="mXg-HB-bLn" firstAttribute="trailing" secondItem="Lpj-p5-6du" secondAttribute="trailing" id="FsP-rb-ZhU"/>
-                        <constraint firstItem="jkO-Q9-FSj" firstAttribute="top" secondItem="2lO-tU-L6P" secondAttribute="bottom" constant="15" id="IoP-ci-vwG"/>
                         <constraint firstItem="p7Z-cn-udS" firstAttribute="leading" secondItem="y7q-sc-Y9n" secondAttribute="leading" constant="15" id="NGV-db-uNF"/>
                         <constraint firstItem="Lpj-p5-6du" firstAttribute="top" secondItem="p7Z-cn-udS" secondAttribute="bottom" constant="16" id="Pti-IM-HOS"/>
                         <constraint firstAttribute="trailing" secondItem="p7Z-cn-udS" secondAttribute="trailing" constant="15" id="ToJ-tB-RWC"/>
                         <constraint firstItem="mXg-HB-bLn" firstAttribute="top" secondItem="Lpj-p5-6du" secondAttribute="bottom" constant="8" symbolic="YES" id="VNn-9h-pmq"/>
                         <constraint firstItem="Lpj-p5-6du" firstAttribute="trailing" secondItem="p7Z-cn-udS" secondAttribute="trailing" id="VRi-TM-TbZ"/>
-                        <constraint firstItem="2lO-tU-L6P" firstAttribute="top" secondItem="mXg-HB-bLn" secondAttribute="bottom" constant="15" id="WNG-cV-cAc"/>
                         <constraint firstAttribute="bottom" secondItem="jkO-Q9-FSj" secondAttribute="bottom" constant="20" id="XO9-9A-OMz"/>
-                        <constraint firstItem="2lO-tU-L6P" firstAttribute="trailing" secondItem="Lpj-p5-6du" secondAttribute="trailing" id="b3d-MR-ktr"/>
                         <constraint firstItem="Lpj-p5-6du" firstAttribute="leading" secondItem="p7Z-cn-udS" secondAttribute="leading" id="coD-om-R8o"/>
                         <constraint firstItem="jkO-Q9-FSj" firstAttribute="centerX" secondItem="y7q-sc-Y9n" secondAttribute="centerX" id="iZh-cQ-dwZ"/>
-                        <constraint firstItem="2lO-tU-L6P" firstAttribute="leading" secondItem="Lpj-p5-6du" secondAttribute="leading" id="jBK-R3-t6R"/>
+                        <constraint firstItem="I6D-oF-c79" firstAttribute="trailing" secondItem="mXg-HB-bLn" secondAttribute="trailing" id="kLy-Pc-cGu"/>
+                        <constraint firstItem="I6D-oF-c79" firstAttribute="top" secondItem="mXg-HB-bLn" secondAttribute="bottom" constant="15" id="mwc-cY-EML"/>
                         <constraint firstItem="p7Z-cn-udS" firstAttribute="top" secondItem="y7q-sc-Y9n" secondAttribute="top" constant="15" id="oDG-Qd-wCO"/>
+                        <constraint firstItem="I6D-oF-c79" firstAttribute="leading" secondItem="mXg-HB-bLn" secondAttribute="leading" id="pnt-V1-muC"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
