--- a/Done/CollectionViewCells/ProofMediaCollectionViewCell.xib
+++ b/Done/CollectionViewCells/ProofMediaCollectionViewCell.xib
@@ -41,7 +41,7 @@
                             </button>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="YCz-Hz-igF">
                                 <rect key="frame" x="74" y="83" width="37" height="37"/>
-                                <color key="color" red="0.59607843140000005" green="0.76862745099999996" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
